# numbarrow

./: .buildinfo  CLAUDE.md  README.md  genindex.html  index.html  modules.html  numbarrow.core.adapters.html  numbarrow.core.configurations.html  numbarrow.core.is_null.html  numbarrow.core.mapinarrow_factory.html  numbarrow.utils.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  sitemap.xml
.doctrees/: environment.pickle  index.doctree  modules.doctree  numbarrow.core.adapters.doctree  numbarrow.core.configurations.doctree  numbarrow.core.is_null.doctree  numbarrow.core.mapinarrow_factory.doctree  numbarrow.utils.doctree
.github/workflows/: docs.yml  minimax_code_review.yml  numbarrow_ci.yml
_modules/: index.html
_modules/numbarrow/core/: adapters.html  is_null.html  mapinarrow_factory.html
_modules/numbarrow/utils/: arrow_array_utils.html  utils.html
_sources/: index.rst.txt  numbarrow.core.adapters.rst.txt  numbarrow.core.configurations.rst.txt  numbarrow.core.is_null.rst.txt  numbarrow.core.mapinarrow_factory.rst.txt  numbarrow.utils.rst.txt
docs/: conf.py  modules.rst  numbarrow.core.adapters.rst  numbarrow.core.mapinarrow_factory.rst
docs/plans/: 2026-03-19-documentation-design.md  2026-03-19-documentation-impl.md  2026-03-19-documentation-impl.md.tasks.json
docs/superpowers/plans/: 2026-04-05-struct-level-bitmap.md  (+1 more)
numbarrow/core/: adapters.py  configurations.py  is_null.py  mapinarrow_factory.py
numbarrow/utils/: arrow_array_utils.py  utils.py
test/: test_arrow_array_utils.py  test_offset.py
(+1 files in other folders)
