[build-system]
requires = ["setuptools~=75.3.0", "wheel~=0.45.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["numbarrow*"]

[project]
name = "numbarrow"
dependencies = [
    "numba>=0.60.0,<0.64.0",
    "pyarrow<=15.0.0",
]
dynamic = ["version"]
requires-python = ">=3.10"
license = {file = "LICENSE"}
keywords = ["pyarrow", "pyspark", "numba", "numpy"]
authors = [
  {name = "Mikhail Goykhman"}
]
readme = "README.md"

[project.optional-dependencies]
test = [
    "pyspark>=3.3.0,<4.0.0",
]
mapinarrow = [
    "pandas>=1.5.0",
]
docs = [
    "sphinx==8.1.3", "sphinx-sitemap==2.7.2", "sphinx_rtd_theme"
]

[tool.setuptools.dynamic]
version = {attr = "numbarrow.__version__"}
